Business rules use jslt for parameter conversion